Fix z-index & Joli titre

--- a/Front-end-Innovation/src/CSS/Header.css
+++ b/Front-end-Innovation/src/CSS/Header.css
@@ -5,7 +5,6 @@ header {
     width: 100vw;
 }
 
-
 .App-header {
     padding: 20px;
     position: relative; 
@@ -28,17 +27,23 @@ header h1 {
     position: relative;
 }
 
+header h1::first-letter {
+    color: var(--hl-color);
+    font-size: 130%;
+    vertical-align: sub;
+}
+
 header h1::after {
     content: "";
     position: absolute;
 
-    width: 75%;
-    height: 2px;
+    width: 80%;
+    height: 3px;
     border-radius: 2px;
-    left: 25%;
-    bottom: 0px;
+    left: 17%;
+    bottom: 20px;
 
-    background-color: var(--title-color);
+    background-color: var(--hl-color);
 }
 
 .circle-container
@@ -49,6 +54,7 @@ header h1::after {
 }
 
 .circle {
+    position: relative;
     aspect-ratio: 1;
     width: 200px;
     border-radius: 100%;
